--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -4,8 +4,8 @@ server {
     server_name _;
     server_tokens off;
 
-    root /app/;
-    index index.php;
+    root /app;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
@@ -14,6 +14,10 @@ server {
     location ~ \.php$ {
         include fastcgi_params;
         fastcgi_pass php:9000;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
