--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -12,7 +12,8 @@ ENV BUILD_DEPS \
     libzip-dev \
     libpng-dev \
     libjpeg-turbo-dev \
-    postgresql-dev
+    postgresql-dev \ 
+    git
 
 ENV PHP_EXTENSIONS \
     opcache \
@@ -29,9 +30,17 @@ RUN apk add --no-cache --virtual .build-deps $BUILD_DEPS \
 
 RUN apk add --no-cache --virtual .run-deps $RUN_DEPS
 
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 RUN echo 'memory_limit = -1' >> /usr/local/etc/php/conf.d/docker-php-memlimit.ini;
 
 # Copy the application code
 COPY . /app
 
+# Change working directory
+WORKDIR /app
+
+# Install PHPUnit
+RUN composer install
+
+# Define volumes
 VOLUME ["/app"]
