fixed composer install

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,3 +1,4 @@
+
 FROM php:8.3.7RC1-fpm-alpine3.19
 
 ENV RUN_DEPS \
@@ -30,17 +31,16 @@ RUN apk add --no-cache --virtual .build-deps $BUILD_DEPS \
 
 RUN apk add --no-cache --virtual .run-deps $RUN_DEPS
 
-COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
-RUN echo 'memory_limit = -1' >> /usr/local/etc/php/conf.d/docker-php-memlimit.ini;
-
 # Copy the application code
 COPY . /app
-
 # Change working directory
 WORKDIR /app
 
-# Install PHPUnit
-RUN composer install
+ENV COMPOSER_ALLOW_SUPERUSER=1
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+RUN chmod +x /usr/bin/composer
 
 # Define volumes
 VOLUME ["/app"]
+
+
